--- a/holidaze/src/components/SearchField/SearchField.module.css
+++ b/holidaze/src/components/SearchField/SearchField.module.css
@@ -3,7 +3,7 @@
 }
 
 .searchInputField {
-    width: 75%;
+    width: 100%;
 }
 
 .searchResultsContainer {
